--- a/public/css/page/page.css
+++ b/public/css/page/page.css
@@ -1,10 +1,8 @@
 body {
     padding-top: 70px; /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
 }
-#wrapper nav{
-    margin-bottom: 0;
-}
-.menu1 ul{
+
+.menu-left-page ul{
     position: absolute;
     z-index: 999;
 }
