--- a/public/css/page/page.css
+++ b/public/css/page/page.css
@@ -114,3 +114,21 @@ a:hover{
     color: #fff;
     background-color: #337ab7;
 }
+
+.bs-callout {
+    padding: 20px;
+    margin: 20px 0;
+    border: 1px solid #eee;
+    border-left-width: 5px;
+    border-radius: 3px;
+}
+.bs-callout-info {
+    border-left-color: #1b809e;
+}
+
+.bs-callout-info h2 {
+    color: #1b809e;
+}
+.booksame {
+    margin-top: 10px;
+}
